# cms_data_load

./: README.md  Report Description.csv  Report Description.txt  databricks.yml  pyproject.toml  target_files.json
.ai-dev-kit/: .installed-skills  .skills-profile
resources/: backfill_job.job.yml  cms_checkpoints.volume.yml  cms_data_load_etl.pipeline.yml  cms_landing.volume.yml  monthly_job.job.yml  sample_job.job.yml  schemas.schema.yml  volumes.volume.yml
src/: autoloader_process.py  download_extract.py  orchestrator.py  process_tables-1.ipynb  process_tables.ipynb  process_tables.py.ipynb  sample_notebook.ipynb  table_mappings.json  utils.py
src/cms_data_load/: main.py
src/cms_data_load_etl/: README.md
src/cms_data_load_etl/transformations/: sample_trips_cms_data_load.py  sample_zones_cms_data_load.py
tests/: sample_taxis_test.py  test_pipeline.py
